Added support for JDK.
Signed-off-by: Bruno Carbone <brunocr1050@gmail.com>